--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <header id="banner-right" class="">
                     <a onclick="home()">
                         <div id="name-right" class="">Pictura Mundi</div>
-                        <div id="author-right" class="">Matthias Szobody</div>
+                        <div id="author-right" class="">by Matthias</div>
                     </a>
                 </header>
 
@@ -60,7 +60,7 @@
                             </p>
                         </section>
                         <section class="hobby">
-                            <h3><a onclick="obsidian()">Pen and ink script</a></h3>
+                            <h3><a onclick="obsidian()">Ink script</a></h3>
                             <!-- <p><a onclick="obsidian()">Custom script</a>
                             </p> -->
                         </section>
@@ -722,7 +722,7 @@
                         <div id="name-left" class="name">Pictura Mundi
 
                         </div>
-                        <div id="author-left" class="author">Matthias Szobody</div>
+                        <div id="author-left" class="author">by Matthias</div>
                     </a>
                 </header>
 
