removed home headings

--- a/index.html
+++ b/index.html
@@ -42,25 +42,24 @@
                 <main id="home-main">
                     <article>
                         <section class="hobby">
-                            <h3><a href="https://www.toyotawar.com">Opération Manta board game</a></h3>
+                            <p><a href="https://www.toyotawar.com">Opération Manta board game</a></p>
                             <!-- <p>
                                 <a href="https://www.toyotawar.com">Opération Manta on Steam</a>
                             </p> -->
                         </section>
                         <section class="hobby">
-                            <h3>Typing software</h3>
-                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">Custom MacOS
-                                    layouts</a></p>
+                            <!-- <h3>Typing software</h3> -->
+                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">Custom
+                                    typing layouts</a></p>
 
                             <p>
                                 <!-- <a onclick="largePage(), keyboard()">Keyboard firmware</a> -->
                                 <!-- <a onclick="keyboard()">30% keyboard firmware</a> -->
-                                <a href="https://github.com/picturamundi/zmk-config" target="_blank">30%
-                                    firmware</a>
+                                <a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
                             </p>
                         </section>
                         <section class="hobby">
-                            <h3><a onclick="obsidian()">Ink script</a></h3>
+                            <p><a onclick="obsidian()">Ink script</a></p>
                             <!-- <p><a onclick="obsidian()">Custom script</a>
                             </p> -->
                         </section>
@@ -478,7 +477,7 @@
                         <h2>Writing consonants</h2>
 
                         <p>The general character shape of written consonant sounds indicates location in the mouth; each
-                            individual charactes indicates a series of similar sounds; and diacritics distinguish each
+                            individual character indicates a series of similar sounds; and diacritics distinguish each
                             sound in the series.</p>
 
                         <div class="large-table simple-script">
@@ -741,7 +740,7 @@
                         <div id="back"><a onclick="home()">&lt;------ Back</a></div>
                     </section>
                     <section id="headings">
-                        <h3>30% keyboard firmware</h3>
+                        <h3>36-QUI firmware</h3>
                         <p><a href="#this-is-my-handwriting-game">Introduction</a></p>
                         <p><a href="#alphabet">Alphabet</a></p>
                         <p><a href="#manuscript">Manuscript</a></p>
