urbo's HRM adjustments

--- a/index.html
+++ b/index.html
@@ -42,107 +42,25 @@
                 <main id="home-main">
                     <article>
                         <section class="hobby">
-                            <p><a href="https://www.toyotawar.com">Opération Manta board game</a></p>
-                            <!-- <p>
-                                <a href="https://www.toyotawar.com">Opération Manta on Steam</a>
-                            </p> -->
+                            <p><a href="https://www.toyotawar.com" target="_blank">Opération Manta board game</a></p>
                         </section>
+
                         <section class="hobby">
                             <!-- <h3>Typing software</h3> -->
                             <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">Custom
                                     typing layouts</a></p>
-
-                            <p>
-                                <!-- <a onclick="largePage(), keyboard()">Keyboard firmware</a> -->
-                                <!-- <a onclick="keyboard()">30% keyboard firmware</a> -->
-                                <a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
+                            <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
                             </p>
                         </section>
+
                         <section class="hobby">
                             <p><a onclick="obsidian()">Ink script</a></p>
-                            <!-- <p><a onclick="obsidian()">Custom script</a>
-                            </p> -->
                         </section>
-                    </article>
-                </main>
 
-                <main id="dvorak-main">
-                    <article>
-                        <p>The following keyboard layouts offer practical functionality to Dvorak typists and users of
-                            small keyboards on macOS.</p>
-                        <h2>Installation</h2>
-                        <p>Each individual layout can be downloaded as a .zip archive which contains a .bundle file.
-                            This file needs to be placed in the <code>/Library/Keyboard Layouts</code> directory, then
-                            installed in System Settings > Keyboard > Keyboard layouts. Click on the <code>+</code>
-                            button to add a new input source, then locate custom layouts in the <code>Others</code>
-                            category.
-                        </p>
-                        <pre class="button">
-+---------------------------------+
-|                                 |
-|      Download all layouts       |
-|                                 |
-+---------------------------------+</pre>
-                        <p>Alternatively, all layouts can be downloaded simultaneously above.</p>
-
-
-                        <h2 id="dvorak-international">Dvorak International</h2>
-                        <p><code>Dvorak International</code> makes it easier for Dvorak users to type a number of
-                            diacritics and accents used in French, Spanish, and other languages. It does this by
-                            imitating the same
-                            system of dead-keys which many QWERTY users know thanks to the
-                            <code>U.S. International - PC</code> layout.
-                        </p>
-                        <!-- <ul>
-                            <li>Apostrophe for accute accent (é) and cedilla (ç)</li>
-                            <li>Backtick for grave accent (è)</li>
-                            <li>Caret/Circumflex symbol for circumflex accent (ê)</li>
-                            <li>Double quotes for diaeresis (ë)</li>
-                            <li>Tilde symbol for tilde diacritic, or "virgulilla" (ñ)</li>
-                        </ul> -->
-                        <a href="assets/dvorak-international-qwerty-command.zip" download>
-                            <div id="dvorak-download">
-                                <pre class="button">
-+---------------------------------+
-|                                 |
-|  Download Dvorak International  |
-|                                 |
-+---------------------------------+</pre>
-                            </div>
-                        </a>
-                        <p>The layout also includes QWERTY commands.</p>
-
-                        <h2 id="30-international">30% International</h2>
-                        <p><code>30% International</code> is a diacritics-focused layout based on
-                            <code>U.S. International</code> with small keyboards in mind
-                            (e.g. 30% or 40%). Is uses the semi-colon as a dead key
-                            for the circumflex accent, rather than the caret symbol, the latter being not as accessible
-                            with small form-factors.
-                        </p>
-                        <div id="dvorak-download">
-                            <pre class="button">
-+---------------------------------+
-|                                 |
-|   Download 30% International    |
-|                                 |
-+---------------------------------+</pre>
-                        </div>
-                        <p>Since it is meant to be used with external keyboards, third layout is QWERTY; any
-                            alternate layouts are implemented directly on the external keyboard's controller.
-                        </p>
-
-                        <h2 id="dvorak-to-qwerty">Dvorak to QWERTY</h2>
-                        <p><code>Dvorak to QWERTY</code> allows an external Dvorak keyboard to be used as a
-                            QWERTY keyboard even if the QWERTY layout is not included in its firmware.</p>
-                        <pre class="button">
-+---------------------------------+
-|                                 |
-|    Download Dvorak to QWERTY    |
-|                                 |
-+---------------------------------+</pre>
-                        <p>The layout achieves this conversion by
-                            mapping a QWERTY key's position to the QWERTY letter which occupies the position of
-                            that same key in the Dvorak layout.</p>
+                        <section class="hobby">
+                            <p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody"
+                                    target="_blank">Theology</a></p>
+                        </section>
                     </article>
                 </main>
 
@@ -665,52 +583,6 @@
                     </article>
                 </main>
 
-                <main id="keyboard-main" class="">
-                    <article>
-                        <h3>hello there</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/0.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/1-2.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/3-4.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/5-6.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/0.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/0.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
-                            suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
-                            cupiditate eaque quis vel?</p>
-                        <img src="assets/images/legend/0.svg" alt="" class="theme-img" id="legend">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta illum nam corrupti, commodi
-                            blanditiis iusto atque corporis voluptate voluptatibus expedita itaque, nisi voluptatem
-                            delectus perferendis quod eaque, eligendi exercitationem eos!
-                            Quos temporibus neque id velit repudiandae corrupti. Expedita ratione accusamus neque alias
-                            perferendis eius numquam suscipit incidunt, placeat quia animi saepe dolore doloribus
-                            veritatis, ipsum ipsa! Ullam voluptates sit ut.
-                            Maxime blanditiis tenetur, cupiditate obcaecati explicabo, necessitatibus quis error
-                            accusantium optio possimus nostrum minima! Veniam laborum enim perspiciatis sunt magnam
-                            porro, possimus saepe temporibus vitae ipsum necessitatibus, non ad fugiat.
-                            Repellat voluptate rem, atque id earum ab incidunt. Velit omnis qui similique ea error vitae
-                            fuga, neque eos eius reprehenderit ipsa soluta aliquam illo repellendus molestias impedit,
-                            quod, maxime minus!</p>
-                    </article>
-                </main>
-
             </section>
 
 
@@ -729,7 +601,7 @@
                     <section id="headings">
                         <p id="website-link"><a target="_blank"
                                 href="https://www.keebtalk.com/u/picturamundi">picturamundi.com</a></p>
-                        <p><a href="https://reddit.com/user/picturamundi/" target="_blank">/u/picturamundi</a></p>
+                        <p><a href="https://reddit.com/user/picturamundi/" target="_blank">u/picturamundi</a></p>
                         <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
                     </section>
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
@@ -744,30 +616,6 @@
                         <p><a href="#this-is-my-handwriting-game">Introduction</a></p>
                         <p><a href="#alphabet">Alphabet</a></p>
                         <p><a href="#manuscript">Manuscript</a></p>
-                    </section>
-                    <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
-                </nav>
-
-                <nav id="dvorak-nav">
-                    <section>
-                        <div id="back"><a onclick="home()">&lt;------ Back</a></div>
-                    </section>
-                    <section id="headings">
-                        <h3>MacOS keyboard layouts</h3>
-                        <p><a onclick="dvorakInternation()">Dvorak International</a></p>
-                        <script>
-                            function dvorakInternation() {
-                                document.getElementById("dvorak-international").scrollIntoView();
-                            }
-                            function thirtyInternation() {
-                                document.getElementById("30-international").scrollIntoView();
-                            }
-                            function dvorakToQwerty() {
-                                document.getElementById("dvorak-to-qwerty").scrollIntoView();
-                            }
-                        </script>
-                        <p><a onclick="thirtyInternation()">30% International</a></p>
-                        <p><a onclick="dvorakToQwerty()">Dvorak to QWERTY</a></p>
                     </section>
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
                 </nav>
