--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <main id="home-main">
                     <article>
-                        <section class="hobby desktop">
+                        <section class="hobby">
                             <p><a href="https://www.toyotawar.com" target="_blank">Opération Manta board game</a></p>
                         </section>
 
@@ -51,10 +51,6 @@
                                     typing layouts</a></p>
                             <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
                             </p>
-                        </section>
-
-                        <section class="hobby mobile">
-                            <p><a href="https://www.toyotawar.com" target="_blank">Opération Manta board game</a></p>
                         </section>
 
                         <section class="hobby">
