--- a/index.html
+++ b/index.html
@@ -600,8 +600,12 @@
                     <section id="headings">
                         <p id="website-link"><a target="_blank"
                                 href="https://www.keebtalk.com/u/picturamundi">picturamundi.com</a></p>
-                        <p><a href="https://reddit.com/user/picturamundi/" target="_blank">u/picturamundi</a></p>
-                        <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
+                        <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
+                                target="_blank">u/picturamundi</a></p>
+                        <p><a class="twitter-link" href="https://twitter.com/picturamundi"
+                                target="_blank">@picturamundi</a></p>
+                        <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
+                                target="_blank">picturamundi</a></p>
                     </section>
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
                 </nav>
