fix theme preference storage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="">
 </head>
 
-<body id="body">
+<body id="body" class="light-theme">
 
     <img src="images/avatar.gif" alt="" id="avatar">
 
