--- a/index.html
+++ b/index.html
@@ -12,19 +12,7 @@
 
 <body id="body" class="light-theme">
 
-    <img src="images/avatar.gif" alt="" id="avatar">
-
-    <style>
-        #avatar {
-            filter: brightness(10) saturate(0);
-            position: fixed;
-            width: 2rem;
-            bottom: 0;
-            left: 20vw;
-            opacity: 0.9;
-            image-rendering: pixelated;
-        }
-    </style>
+    <!-- <img src="images/avatar.gif" alt="" id="avatar"> -->
 
     <div id="content-wrapper">
 
@@ -584,7 +572,6 @@
 
             </section>
 
-
             <aside id="sidebar">
 
                 <header class="" id="banner-left">
@@ -610,19 +597,6 @@
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
                 </nav>
 
-                <nav id="keyboard-nav">
-                    <section>
-                        <div id="back"><a onclick="home()">&lt;------ Back</a></div>
-                    </section>
-                    <section id="headings">
-                        <h3>36-QUI firmware</h3>
-                        <p><a href="#this-is-my-handwriting-game">Introduction</a></p>
-                        <p><a href="#alphabet">Alphabet</a></p>
-                        <p><a href="#manuscript">Manuscript</a></p>
-                    </section>
-                    <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
-                </nav>
-
                 <nav id="obsidian-nav">
                     <section>
                         <div id="back"><a onclick="home()">&lt;------ Back</a></div>
@@ -630,9 +604,7 @@
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
                 </nav>
 
-
             </aside>
-
 
         </div>
         <!-- content -->
