--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="script.js"></script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#191919">
     <meta name="msapplication-TileColor" content="#191919">
@@ -35,6 +35,7 @@
                 </header>
 
                 <main id="home-main">
+                    <img src="favicon-32x32.png" alt="" style="width: 16px; height: 16px; image-rendering: pixelated;">
                     <article>
                         <section class="hobby">
                             <p><a href="https://www.toyotawar.com" target="_blank">Opération Manta board game</a></p>
