--- a/index.html
+++ b/index.html
@@ -39,24 +39,26 @@
                         </section>
 
                         <section class="hobby">
-                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">Custom
-                                    typing layouts</a></p>
                             <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
                             </p>
+                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">Custom
+                                    typing layouts</a></p>
                         </section>
 
                         <section class="hobby">
-                            <p><a onclick="obsidian()">Ink script</a></p>
+                            <p><a onclick="script()">Ink script</a></p>
                         </section>
 
                         <section class="hobby">
                             <p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody"
                                     target="_blank">Theology</a></p>
                         </section>
+
+
                     </article>
                 </main>
 
-                <main id="obsidian-main">
+                <main id="script-main">
                     <article>
 
                         <p>I use this custom English script to explore aspects of writing which I find interesting. I
@@ -602,7 +604,7 @@
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
                 </nav>
 
-                <nav id="obsidian-nav">
+                <nav id="script-nav">
                     <section>
                         <div id="back"><a onclick="home()">&lt;------ Back</a></div>
                     </section>
