--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>picturamundi</title>
+    <title>pictura mundi</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 
@@ -27,31 +27,31 @@
 
                 <header id="banner-right" class="">
                     <a onclick="home()">
-                        <div id="name-right" class="">Pictura Mundi</div>
-                        <div id="author-right" class="">by Matthias</div>
+                        <div id="name-right" class="">pictura mundi</div>
+                        <div id="author-right" class="">by matthias</div>
                     </a>
                 </header>
 
                 <main id="home-main">
                     <article>
                         <section class="hobby">
-                            <p><a href="https://www.toyotawar.com" target="_blank">Opération Manta board game</a></p>
+                            <p><a href="https://www.toyotawar.com" target="_blank">opération manta board game</a></p>
                         </section>
 
                         <section class="hobby">
                             <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
                             </p>
-                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">Custom
+                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">custom
                                     typing layouts</a></p>
                         </section>
 
                         <section class="hobby">
-                            <p><a onclick="script()">Ink script</a></p>
+                            <p><a onclick="script()">ink script</a></p>
                         </section>
 
                         <section class="hobby">
                             <p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody"
-                                    target="_blank">Theology</a></p>
+                                    target="_blank">theology</a></p>
                         </section>
 
 
@@ -583,10 +583,10 @@
 
                 <header class="" id="banner-left">
                     <a onclick="home()">
-                        <div id="name-left" class="name">Pictura Mundi
+                        <div id="name-left" class="name">pictura mundi
 
                         </div>
-                        <div id="author-left" class="author">by Matthias</div>
+                        <div id="author-left" class="author">by matthias</div>
                     </a>
                 </header>
 
@@ -601,14 +601,14 @@
                         <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
                                 target="_blank">picturamundi</a></p>
                     </section>
-                    <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
+                    <p><button id="theme-toggle" onclick="themeToggle()">[theme]</button></p>
                 </nav>
 
                 <nav id="script-nav">
                     <section>
-                        <div id="back"><a onclick="home()">&lt;------ Back</a></div>
+                        <div id="back"><a onclick="home()">&lt;------ back</a></div>
                     </section>
-                    <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
+                    <p><button id="theme-toggle" onclick="themeToggle()">[theme]</button></p>
                 </nav>
 
             </aside>
