page-specific urls

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section id="main-col" class="">
 
                 <header id="banner-right" class="">
-                    <a onclick="home()">
+                    <a href="#home">
                         <div id="name-right" class="">pictura mundi</div>
                         <div id="author-right" class="">by matthias</div>
                     </a>
@@ -46,7 +46,7 @@
                         </section>
 
                         <section class="hobby">
-                            <p><a onclick="script()">ink script</a></p>
+                            <p><a onclick="" href="#script">ink script</a></p>
                         </section>
 
                         <section class="hobby">
@@ -582,7 +582,7 @@
             <aside id="sidebar">
 
                 <header class="" id="banner-left">
-                    <a onclick="home()">
+                    <a href="#home">
                         <div id="name-left" class="name">pictura mundi
 
                         </div>
@@ -606,7 +606,7 @@
 
                 <nav id="script-nav">
                     <section>
-                        <div id="back"><a onclick="home()">&lt;------ back</a></div>
+                        <div id="back"><a href="#home">&lt;------ back</a></div>
                     </section>
                     <p><button id="theme-toggle" onclick="themeToggle()">[theme]</button></p>
                 </nav>
