--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         </section>
 
                         <section class="hobby">
-                            <p><a onclick="" href="#script">ink script</a></p>
+                            <!-- <p><a onclick="" href="#script">ink script</a></p> -->
+                            <p><a onclick="script()">ink script</a></p>
                         </section>
 
                         <section class="hobby">
