--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <section class="hobby">
                             <!-- <p><a onclick="" href="#script">ink script</a></p> -->
-                            <p><a onclick="script()">ink script (test)</a></p>
+                            <p><a onclick="script()">ink script (fix)</a></p>
                         </section>
 
                         <section class="hobby">
